--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,34 +1,57 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Brand:</strong>
-  <%= @product.brand %>
-</p>
+<section class="section product-show">
+  <div class="columns">
+    <div class="column is-8">
+      <h1 class="title"><%= @product.title %></h1>
 
-<p>
-  <strong>Location:</strong>
-  <%= @product.location %>
-</p>
+      <div class="feature-image">
+        <%= image_tag(@product.image_url(:default)) %>
+      </div>
 
-<p>
-  <strong>Description:</strong>
-  <%= @product.description %>
-</p>
+      <div class="content border-radius-3">
+        <br />
+        <h3 class="subtitle is-4 pt5">Description</h3>
+        <%= @product.description %>
+        
+        <br />
+        <h3 class="subtitle is-4 pt5">Product Specs</h3>
 
-<p>
-  <strong>Condition:</strong>
-  <%= @product.condition %>
-</p>
+        <table class="table is-narrow">
+          <% if @product.condition %>
+            <tr>
+              <td class="has-text-weight-bold">Condition</td>
+              <td><%= @product.condition %></td>
+            </tr>
+          <% end %>
 
-<p>
-  <strong>Title:</strong>
-  <%= @product.title %>
-</p>
+          <% if @product.brand %>
+            <tr>
+              <td class="has-text-weight-bold">Brand</td>
+              <td><%= @product.brand %></td>
+            </tr>
+          <% end %>
 
-<p>
-  <strong>Price:</strong>
-  <%= @product.price %>
-</p>
-
-<%= link_to 'Edit', edit_product_path(@product) %> |
-<%= link_to 'Back', products_path %>
+          <% if @product.location %>
+            <tr>
+              <td class="has-text-weight-bold">Location</td>
+              <td><%= @product.location %></td>
+            </tr>
+          <% end %>
+        </table>
+      </div>
+    </div>
+    <div class="column is-3 is-offset-1">
+      <div class="border-radius-3">
+        <br /><br />
+        <h4 class="title" is-5 has-text-centered><%= number_to_currency(@product.price) %></h4>
+        <p>Sold by <%= @product.user.name %></p>
+        <br />
+        <%= button_to 'Add to cart', line_item_path(product_id: @product), class: 'button is-warning add-to-cart' %>
+      </div>
+    </div>
+  </div>
+  <% if product_author(@product) %>
+    <%= link_to 'Edit', edit_product_path(@product), class: 'button' %>
+  <% end %>
+</section>
