--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
   </head>
 
   <body class="<%= yield (:body_class) %>">
+
     <% if flash[:notice] %>
       <div class="notification is-success global-notification">
         <p class="notice"><%= notice %></p>
@@ -37,7 +38,7 @@
           <div class="navbar-item">
             <div class="field is-grouped">
               <% if user_signed_in? %>
-                <%= link_to 'Sell', '#', class: "navbar-item button is-dark" %>
+                <%= link_to 'Sell', new_product_path, class: "navbar-item button is-dark" %>
 
                 <div class="navbar-item has-dropdown is-hoverable">
                   <%= link_to "Account", edit_user_registration_path, class:"navbar-link" %>
@@ -55,6 +56,8 @@
         </div>
       </div>
     </nav>
+
+    <%= yield(:header) %>
     <div class="container">
       <%= yield %>
     </div>
