--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,6 +1,16 @@
-<h1>Editing Product</h1>
+<% content_for :header do %>
+    <section class="hero is-warning">
+        <div class="hero-body">
+            <div class="container">
+                <h1 class="title">
+                    Edit a Product
+                </h1>
+            </div>
+        </div>
+    </section>
+<% end %>
 
-<%= render 'form', product: @product %>
-
-<%= link_to 'Show', @product %> |
-<%= link_to 'Back', products_path %>
+<br />
+<div class="pv4">
+    <%= render 'form', products: @product %>
+</div>
