--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,37 +1,44 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Products</h1>
+<% content_for :header do %>
+  <section class="hero is-warning">
+    <div class="hero-body">
+      <div class="container">
+        <h1 class="title">
+          Products
+        </h1>
+      </div>
+    </div>
+  </section>
+<% end %>
 
-<table>
-  <thead>
-    <tr>
-      <th>Brand</th>
-      <th>Location</th>
-      <th>Description</th>
-      <th>Condition</th>
-      <th>Title</th>
-      <th>Price</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<br />
 
-  <tbody>
-    <% @products.each do |product| %>
-      <tr>
-        <td><%= product.brand %></td>
-        <td><%= product.location %></td>
-        <td><%= product.description %></td>
-        <td><%= product.condition %></td>
-        <td><%= product.title %></td>
-        <td><%= product.price %></td>
-        <td><%= link_to 'Show', product %></td>
-        <td><%= link_to 'Edit', edit_product_path(product) %></td>
-        <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<div class="product-index-grid pt4">
+  <% @products.each do |product| %>
+    <div class="product border-light">
+      <div class="product-thumb">
+        <%= link_to image_tag(product.image_url(:thumb)), product %>
 
-<br>
+        <% if product.condition? %>
+         <div class="condition">
+            <span class="tag is-dark">
+              <%= product.condition %>
+            </span>
+          </div>
+        <% end %>
+      </div>
 
-<%= link_to 'New Product', new_product_path %>
+      <div class="pa3">
+        <h3 class="fw7 f4 title"><%= link_to product.title, product %></h3>
+        <p class="has-text-grey fg pt1">Sold by <%= product.user.name %></p>
+        <p class="f3 fw6 pt2 price"><%= number_to_currency(product.price) %></p>
+        
+        <% if product_author(product) %>
+          <%= link_to 'Edit', edit_product_path(product), class: "button is-small" %>
+          <%= link_to 'Delete', product, method: :delete, data: { confirm: "Are you sure?" }, class: "button is-small" %>
+        <% end %>
+      </div>
+    </div>
+  <% end %>
+</div>
